--- a/GBriceCorp/src/main/webapp/static/views/Cli_ListeComptes.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cli_ListeComptes.html
@@ -7,7 +7,6 @@
 				<span class="lead">Liste des Comptes <button ng-click="cptCtrl.goToNouveauCompte()" class="floatRight">Nouveau Compte</button></span>
 				
 			</div>
-			<div>ici : {{comptes}}</div>
 
 			<div class="panel-body" >
 				<div class="tablecontainer">
@@ -20,8 +19,8 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr name="liste_comptes" ng-repeat="Compte in comptes  | orderBy:tripar " ng-click="ctrl.detailCompte(Compte.id)>
-								<td>{{Compte.libelle}}</td>
+							<tr name="liste_comptes" ng-repeat="Compte in comptes  | orderBy:tripar " ng-click="ctrl.detailCompte(Compte.id)">
+								<td >{{Compte.libelle}}</td>
 								<td>{{Compte.id}} </td>
 								<td>{{Compte.solde}}</td>
 							</tr>
