--- a/GBriceCorp/src/main/webapp/static/views/ConsClient_DetailCompte.html
+++ b/GBriceCorp/src/main/webapp/static/views/ConsClient_DetailCompte.html
@@ -1,18 +1,39 @@
 
 
 
-		<div class=" panel panel-default  " ng-controller="DemandeController as dmdctrl">
+		<div class=" panel panel-default " ng-controller="CompteController as cptctrl"  ng-hide="{{(demande.id!=null)?true:false}}">
 
 			<div class="panel-heading ">
-				<span class="lead" >Compte de {{prenom}} {{nom}} {{demande.prenom}} {{demande.nom}} {{demande.client.prenom}} {{demande.cleint.nom}}
-				{{(dmdctrl.demande[1]!=null)?dmdctrl.demande[1].prenom:dmdctrl.demande[0].prenom}}
+				<span class="lead" >Compte de {{ctrl.currentUser.prenom}} {{ctrl.currentUser.nom}} 
+
 				</span>
+		
 			</div>
 			<ul class="list-group">
-				<li class="list-group-item">{{adresse}}{{demande.adresse}}  {{demande.client.adresse}}</li>
-				<li class="list-group-item">tel: {{telephone}}{{demande.telephone}}  {{demande.client.telephone}}</li>
-				<li class="list-group-item">email: {{mail}}{{demande.mail}}  {{demande.client.mail}}</li>
-				<li class="list-group-item" ng-hide="{{(demande.id==null)?true:false}}">
+				<li class="list-group-item">{{ctrl.currentUser.adresse}}</li>
+				<li class="list-group-item">Tel: {{ctrl.currentUser.telephone}}</li>
+				<li class="list-group-item">Email: {{ctrl.currentUser.mail}}</li>
+				
+			</ul>
+
+		</div>
+		<div class=" panel panel-default " ng-controller="DemandeController as dmdctrl" ng-hide="{{(demande.id==null)?true:false}}">
+
+			<div class="panel-heading ">
+
+				<span class="lead" >Compte de {{demande.prenom}} {{demande.nom}} {{demande.client.prenom}} {{demande.cleint.nom}}
+
+				</span>	
+				<span class="lead" >Demande {{demande.type}}{{demande.client.type}}
+
+				</span>				
+			</div>
+			<ul class="list-group">
+				<li class="list-group-item">{{demande.adresse}}  {{demande.client.adresse}}</li>
+				<li class="list-group-item">Tel: {{demande.telephone}}  {{demande.client.telephone}}</li>
+				<li class="list-group-item">Email: {{demande.mail}}  {{demande.client.mail}}</li>
+				<li class="list-group-item">Revenu moyen: {{demande.revenu}}  {{demande.client.revenu}}</li>				
+				<li class="list-group-item" >
 					<a href="#/" class="btn btn-warning btn-sm ">Retour</a>
 					<a class="btn btn-danger btn-sm "	ng-click="dmdctrl.modifEtat_Demande(demande,'Refusee')">Refus</a>	
 					<a class="btn btn-primary btn-sm "	ng-click="dmdctrl.modifEtat_Demande(demande, 'EnCours')">Attente </a>
@@ -21,8 +42,7 @@
 							</li>
 			</ul>
 
-		</div>
-		
+		</div>		
 				<div class="panel panel-default">
 			<!-- Default panel contents -->
 			<div class="panel-heading">
@@ -48,9 +68,32 @@
 			</div>
 		</div>
 
-<div class="div_view"  ng-repeat="compte in Comptes ">
+<div class="div_view"  ng-repeat="compte in comptes">
 
+<div id="RIBSectionId" class=" panel panel-default ">
+			<div class="panel-heading">
+				<span class="lead">{{compte.libelle}}
+					<button ng-click="ctrl.printToCart('RIBSectionId')"
+						class="btn btn-warning btn-sm floatRight">Imprimer le RIB</button>
+				</span>
+			</div>
+			<ul class="list-group">
+				<li class="list-group-item">IBAN: {{compte.id}}</li>
+				<li class="list-group-item">Solde : {{compte.solde}} euros</li>
 
+				<li class="list-group-item">Remuneration : {{compte.tauxRemuneration}} % 
+
+					<button ng-click="" class="btn btn-danger btn-sm floatRight">Modifer</button>
+				</li>
+				<li class="list-group-item" ng-hide="{{(compte.tauxRemuneration!=0)?true:false}}">Seuil de remuneration : {{compte.seuil}} euros</li>
+				<li class="list-group-item">Agios : {{compte.tauxDecouvert}} %
+				</li>
+				<li class="list-group-item">Decouvert autorise : {{compte.decouvert}}
+					<button ng-click="" class="btn btn-danger btn-sm floatRight">Modifer</button>
+				</li>
+			</ul>
+		</div>
+		
 	<div id="ReleveSectionId" class="panel panel-default ">
 			<!-- Default panel contents -->
 			<div class="panel-heading">
@@ -80,25 +123,7 @@
 			</div>
 		</div>
 		
-		<div id="RIBSectionId" class=" panel panel-default ">
-			<div class="panel-heading">
-				<span class="lead">Compte courant a remuneration
-					exponentielle
-					<button ng-click="ctrl.printToCart('RIBSectionId')"
-						class="btn btn-warning btn-sm floatRight">Imprimer le RIB</button>
-				</span>
-			</div>
-			<ul class="list-group">
-				<li class="list-group-item">IBAN: 4587921687327</li>
-				<li class="list-group-item">Solde : 4589754euros</li>
-				<li class="list-group-item">Remuneration : 8
-					<button ng-click="" class="btn btn-danger btn-sm floatRight">Modifer</button>
-				</li>
-				<li class="list-group-item">Agios : 0
-					<button ng-click="" class="btn btn-danger btn-sm floatRight">Modifer</button>
-				</li>
-			</ul>
-		</div>
+		
 		
 		
 	
