--- a/GBriceCorp/src/main/webapp/static/views/Admin_RechCons.html
+++ b/GBriceCorp/src/main/webapp/static/views/Admin_RechCons.html
@@ -35,7 +35,7 @@
 					</thead>
 					<tbody>
 						<tr
-							ng-repeat="Conseiller in ctrl.curentUser.conseillers | filter:search:strict | orderBy:tripar ">
+							ng-repeat="Conseiller in ctrl.currentUser.conseillers | filter:search:strict | orderBy:tripar ">
 							<td ng-model= "cons.nom">{{Conseiller.nom}}</td>
 							<td>{{Conseiller.prenom}}</td>
 							<td>{{Conseiller.adresse}}</td>
