--- a/GBriceCorp/src/main/webapp/static/views/Cons_RechCpt.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cons_RechCpt.html
@@ -21,7 +21,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr ng-repeat="Compte in ctrl.curentUser.clients.comptes  | filter:search:strict | orderBy:tripar " ng-click="ctrl.detailCompte(Compte.id)">
+						<tr ng-repeat="Compte in ctrl.currentUser.clients.comptes  | filter:search:strict | orderBy:tripar " ng-click="ctrl.detailCompte(Compte.id)">
 
 							<td>{{Compte.libelle}}</td>
 								<td>{{Compte.id}} </td>
