--- a/GBriceCorp/src/main/webapp/static/views/Cons_DemCli.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cons_DemCli.html
@@ -7,7 +7,7 @@
 
 	<!-- Default panel contents -->
 	<div class="panel-heading" >
-		<span class="lead">Demande Clients en attente de traitement </span>
+		<span class="lead">Demandes en attente de traitement de type : {{valeur}}</span>
 
 						
 								<select class="form-control" id="sel1"
@@ -19,7 +19,6 @@
 
 	</div>	
 	<!-- Tableau d'affichage des demandes d'ouverture -->
-
 			<div class="panel-body" >
 				<div class="tablecontainer">
 					<table class="table table-hover">
