--- a/GBriceCorp/src/main/webapp/static/views/ConsClient_DetailCompte.html
+++ b/GBriceCorp/src/main/webapp/static/views/ConsClient_DetailCompte.html
@@ -6,7 +6,7 @@
 	ng-hide="{{(client_id==null)?true:false}} ">
 
 	<div class="panel-heading ">
-		<span class="lead">Compte de {{ctrl.currentUser.prenom}}
+		<span class="lead">Espace de {{ctrl.currentUser.prenom}}
 			{{ctrl.currentUser.nom}} </span>
 
 	</div>
@@ -19,14 +19,14 @@
 
 </div>
 <div class=" panel panel-default "
-	ng-controller="DemandeController as dmdctrl"
+	ng-controller="DemandeController as dmdctrl" 
+	ng-init="(client_id==null)?(dmdctrl.findDemandeById(demande_id)):(ctrl.infoById(client_id))"
 	ng-hide="{{(demande_id==null)?true:false}}">
 
 	<div class="panel-heading ">
 
-		<span class="lead">Compte de {{demande.prenom}} {{demande.nom}}
-			{{demande.client.prenom}} {{demande.client.nom}} </span> <span class="lead">Demande
-			{{demande.type}}{{demande.client.type}} </span>
+		<span class="lead">Espace de {{demande.prenom}} {{demande.nom}}
+			{{demande.client.prenom}} {{demande.client.nom}} </span>
 	</div>
 	<ul class="list-group">
 		<li class="list-group-item">{{demande.adresse}}
@@ -37,18 +37,16 @@
 			{{demande.client.mail}}</li>
 		<li class="list-group-item">Revenu moyen: {{demande.revenu}}
 			{{demande.client.revenu}}</li>
-		<li class="list-group-item"><a href="#/"
-			class="btn btn-warning btn-sm ">Retour</a> <a
-			class="btn btn-danger btn-sm "
-			ng-click="dmdctrl.modifEtat_Demande(demande,'Refusee')">Refus</a> <a
-			class="btn btn-primary btn-sm "
-			ng-click="dmdctrl.modifEtat_Demande(demande, 'EnCours')">Attente
-		</a> <a class="btn btn-success btn-sm "
-			ng-click="dmdctrl.validation_Demande(demande)">Valider</a></li>
+		<li class="list-group-item">
+			<a href="#/" class="btn btn-warning btn-sm ">Retour</a>
+			<a class="btn btn-danger btn-sm "	ng-click="dmdctrl.modifEtat_Demande(demande,'Refusee')">Refus</a>
+			<a class="btn btn-primary btn-sm "	ng-click="dmdctrl.modifEtat_Demande(demande, 'EnCours')">Attente</a> 
+			<a class="btn btn-success btn-sm "	ng-click="dmdctrl.validation_Demande(demande)">Valider</a>
+		</li>
 	</ul>
 
 </div>
-<div class="panel panel-default" ng-controller="DemandeController as dmdctrl">
+<div class="panel panel-default" ng-controller="DemandeController as dmdctrl" ng-init="dmdctrl.ListeJustificatifsByIdDemandeOuClient((client_id==null)?demande_id:client_id, (client_id==null)?0:1)">
 	<!-- Default panel contents -->
 	<div class="panel-heading">
 		<span class="lead">Documents disponible</span>
@@ -65,7 +63,7 @@
 			</thead>
 			<tbody>
 				<tr
-					ng-repeat="justificatif in demande.justificatifs | orderBy:tripar ">
+					ng-repeat="justificatif in justificatifs | orderBy:tripar ">
 					<td>{{justificatif.id}}</td>
 					<td>{{justificatif.type}}</td>
 					<td>{{justificatif.date}}</td>
@@ -114,7 +112,10 @@
 	</div>
 </div>
 
-<div class="div_view" ng-repeat="compte in comptes">
+<div class="div_view"
+	ng-controller="CompteController as cptctrl"
+	ng-init="(client_id==null)?(comptes=[]):(cptctrl.findComptesByClientId(client_id))"
+	ng-repeat="compte in comptes">
 
 	<div id="RIBSectionId" class=" panel panel-default ">
 		<div class="panel-heading">
